--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
     
     <script src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/smoothscroll.js"></script> 
+    <script src="assets/js/smoothscroll.js"></script> 
     <script src="assets/js/Chart.js"></script>
-    <script src="assets/js/solution.js"></script>
+    <script src="assets/js/main.js"></script>
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
